--- a/data/timers.html
+++ b/data/timers.html
@@ -10,6 +10,12 @@
   </header>
 
   <main>
+	<h3>Live Force Reading</h3>    
+	<div id='forceValue' style='font-size: 2em;'>0 lbs</div>
+	    <div id='indexButtons' class='button-container'>
+      <button onclick='tareScale()'>Tare Scale</button>
+    </div>
+	<br>---<br>
     <div id='timerDisplay'>00:00</div>
 
     <select id='protocolSelect' onchange='updateTimerSettings()'>
@@ -32,5 +38,23 @@
   </footer>
 
   <script src="timer.js"></script>
+  <script>
+    function updateForce() {
+  fetch('/forceData')
+    .then(response => response.json())
+    .then(data => {
+      document.getElementById('forceValue').innerHTML = data.force + ' lbs';
+    })
+    .catch(error => console.error('Error:', error));
+}
+
+setInterval(updateForce, 100); // Update force 10 times per second
+
+function tareScale(event) {
+  fetch('/tare')
+    .then(response => response.text())
+    .then(data => console.log(data));
+}
+</script>
 </body>
 </html>
